카테고리 수정 ..

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 robots: noindex
 ---
 
-<div float="right">
-<h2><b><a href="{{site.baseurl}}/categories/}}"> categories</b></h2>
+<div class='main-categories'>
+<h4><a href="{{site.baseurl}}/categories/#}}"><b>categories</b></h4>
 </div>
 
 <div class="main-post-list">
